--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -294,8 +294,7 @@
             </div>
             <div class="block-content block-content-full">
                 <%= partial :booking_management_driver, :locals => {:booking_item_family => booking_item_family,
-                                                    :driver_min_age_rules => driver_min_age_rules,
-                                                    :driver_min_age_edition => driver_min_age_edition} %>
+                                                    :driver_min_age_rules => driver_min_age_rules} %>
             </div>
           </div>
         </div>
