--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -252,7 +252,7 @@
             <input type="color" name="planning_color" class="color" value="<%%=booking.planning_color%>" style="width:32px; height: 32px"/>
             <%% if (booking.origin == 'prereservation') { %>
             <button type="button" class="destroy_prereservation_button btn btn-danger left-margin"
-                    style="position:relative; top: -6px" rel="<%%=booking.id%>">Eliminar</button>
+                    style="position:relative; top: -6px" rel="<%%=booking.id2%>">Eliminar</button>
             <%% } %>
           </form>
         </div>
