driver age rules

--- a/views/booking_management_new_reservation.erb
+++ b/views/booking_management_new_reservation.erb
@@ -108,7 +108,7 @@
             <% end %>
 
             <!-- Driver age -->
-            <% if booking_item_family and booking_item_family.driver and driver_age_rules %>
+            <% if booking_item_family and booking_item_family.driver_date_of_birth and driver_age_rules %>
 
                 <div class="form-group">
                   <label class="col-sm-3 control-label">
