--- a/views/_booking_management_customer.erb
+++ b/views/_booking_management_customer.erb
@@ -36,8 +36,9 @@
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_language %></span>
                 <span class="entity-fieldvalue">
                   <select name="customer_language" class="form-control" style="width: 100%">
+                      <option value="" <%% if (entity.customer_language == null || entity.customer_language == ''){%>selected<%%}%>>Seleccione idioma</option>
                     <% @languages.each do |item| %>
-                      <option value="<%=item.code%>" <%% if (entity.customer_language == '<%=item.code%>' || '<%=@default_language%>'=='<%=item.code%>'){%>selected<%%}%>><%=item.description%></option>
+                      <option value="<%=item.code%>" <%% if (entity.customer_language == '<%=item.code%>'){%>selected<%%}%>><%=item.description%></option>
                     <% end %>
                   </select>
                 </span>
